styles.css: Fix a bug where main content would be displayed behind other sections

--- a/portroosa/styles.css
+++ b/portroosa/styles.css
@@ -59,7 +59,7 @@ div {
 
   main {
     grid-column: 1;
-    grid-row 3;
+    grid-row: 3;
   }
 }
 
